---
source: crates/decorous-frontend/src/parser/mod.rs
expression: ast
---
Ok(
    DecorousAst {
        nodes: [
            Node {
                metadata: Location {
                    offset: 1,
                    length: 7,
                },
                node_type: Element(
                    Element {
                        tag: "p",
                        attrs: [],
                        children: [
                            Node {
                                metadata: Location {
                                    offset: 2,
                                    length: 5,
                                },
                                node_type: Text(
                                    Text(
                                        "Hi",
                                    ),
                                ),
                            },
                        ],
                    },
                ),
            },
            Node {
                metadata: Location {
                    offset: 8,
                    length: 9,
                },
                node_type: Text(
                    Text(
                        " Hello, ",
                    ),
                ),
            },
            Node {
                metadata: Location {
                    offset: 17,
                    length: 5,
                },
                node_type: Mustache(
                    Mustache(
                        NAME_REF@0..4
                          IDENT@0..4 "name"
                        ,
                    ),
                ),
            },
        ],
        script: None,
        css: None,
        wasm: None,
        comptime: None,
    },
)
